@@ -78,57 +78,57 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 	<div class="view_info"><span>Example views</span><span class="see">Pick one to update the preview of your widget below. <i><b>Scroll down to view it.</b></i></span></div>
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('publisher_countries').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/countriesall.png" width="260"/>
+			<img src="ctrack/art/generator/countriesall.png" width="260"/>
 			<span class="imgtxt">Recipients (table)</span>
 			<span class="overtxt">Publisher data</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('publisher_countries_top').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/crsdonortop.png" width="260"/>
+			<img src="ctrack/art/generator/crsdonortop.png" width="260"/>
 			<span class="imgtxt">Top Recipients (graph)</span>
 			<span class="overtxt">Publisher data</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('publisher_sectors').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/countriesall.png" width="260"/>
+			<img src="ctrack/art/generator/countriesall.png" width="260"/>
 			<span class="imgtxt">Sectors (table)</span>
 			<span class="overtxt">Publisher data</span>
 		</a>	
 	</div>	
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('publisher_sectors_top').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/crssectortop.png" width="260"/>
+			<img src="ctrack/art/generator/crssectortop.png" width="260"/>
 			<span class="imgtxt">Top Sectors (graph)</span>
 			<span class="overtxt">Publisher data</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('map').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/map.png" width="260"/>
+			<img src="ctrack/art/generator/map.png" width="260"/>
 			<span class="imgtxt">Map (only shows precise locations of activities)</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('stats').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/overview.png" width="260"/>
+			<img src="ctrack/art/generator/overview.png" width="260"/>
 			<span class="imgtxt">Overview (statistics)</span>
 		</a>
 	</div>
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('donors').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/countriesall.png" width="260"/>
+			<img src="ctrack/art/generator/countriesall.png" width="260"/>
 			<span class="imgtxt">Donors for a single recipient (table)</span>
 			<span class="overtxt">Recipient data only</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('donors_top').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/crsdonortop.png" width="260"/>
+			<img src="ctrack/art/generator/crsdonortop.png" width="260"/>
 			<span class="imgtxt">Top Donors for a single recipient (graph)</span>
 			<span class="overtxt">Recipient data only</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('sectors').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/countriesall.png" width="260"/>
+			<img src="ctrack/art/generator/countriesall.png" width="260"/>
 			<span class="imgtxt">Sectors for a single recipient (table)</span>
 			<span class="overtxt">Recipient data only</span>
 		</a>
 	</div>
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('sectors_top').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/crssectortop.png" width="260"/>
+			<img src="ctrack/art/generator/crssectortop.png" width="260"/>
 			<span class="imgtxt">Top Sectors for a single recipient (graph)</span>
 			<span class="overtxt">Recipient data only</span>
 		</a><a href="" class="view mid savi" onclick="$('#generator_view').val('act').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/savi.png" width="85"/>
+			<img src="ctrack/art/generator/savi.png" width="85"/>
 			<span class="imgtxt">Activities displayed using SAVi</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('list_activities').trigger('chosen:updated').trigger('change');return false;" >
-			<img src="art/generator/activities.png" width="260"/>
+			<img src="ctrack/art/generator/activities.png" width="260"/>
 			<span class="imgtxt">List of activities</span>
 		</a>
 	</div>
