@@ -1,6 +1,7 @@
 Development Portal (2017-08-01 shi)
 ==============================
 Renamed 'Status' to 'Activity Status'
+Updated art/ to ctrack/art/ in Generator to fix image paths
 
 
 Development Portal (2017-07-31 shi)
